# Segfault

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  chess_bot  dump.py  eval-250713.txt  model_best.pt  model_best_1.pt  model_best_2.pt  model_epoch_008.pt  model_epoch_016.pt  model_epoch_024.pt  model_epoch_032.pt  mse.txt  weight_dump.py
cmake/: UpdateSubmodules.cmake
engine/: CMakeLists.txt
engine/include/: chess.hh  eval.hh  matmul.hh  protocol.hh  search.hh  segfault.hh  uci.hh  util.hh
engine/src/: eval.cc  main.cc  search.cc  segfault.cc  uci.cc
engine/tests/: CMakeLists.txt  eval_test.cc
include/: chess.hh  eval.hh  search.hh  segfault.hh  uci.hh
src/: eval.cc  main.cc  search.cc  segfault.cc  uci.cc
train/: CMakeLists.txt  Dockerfile  docker-compose.yaml
train/include/: chess.hh  eval.hh  minimal_mlp.hh  process.hh  stockfish.hh  util.hh
train/include/MiniDNN/Activation/: Mish.h
train/include/MiniDNN/Output/: BinaryClassEntropy.h
train/include/libtorch/include/ATen/: Config.h
train/include/libtorch/include/caffe2/core/: macros.h
train/include/libtorch/share/cmake/Torch/: TorchConfig.cmake
train/include/tiny_dnn/: config.h
train/src/: eval.cc  main.cc  process.cc
